--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.8.1",
     "jest-expo": "23.0.0",
+    "react-native-scripts": "^1.14.1",
     "react-test-renderer": "16.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "expo": "^23.0.4",
+    "primeicons": "^1.0.0-beta.9",
+    "primereact": "^1.6.2",
     "react": "16.0.0",
-    "react-native": "0.50.3",
+    "react-native": "^0.55.4",
     "react-navigation": "^1.5.11"
   }
 }
