--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^23.0.4",
+    "hoek": "^5.0.3",
     "primeicons": "^1.0.0-beta.9",
     "primereact": "^1.6.2",
     "react": "16.0.0",
